--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         messagingSenderId: "954655585515",
                     };
                     firebase.initializeApp(config);
-                    navigator.serviceWorker.register('https://ajurska.github.io/thor1/firebase-messaging-sw.js')
+                    navigator.serviceWorker.register('https://in.healthynature.xyz/17523/Thor-3/firebase-messaging-sw.js')
                     
                      const messaging = firebase.messaging();
                     
